# concinnity

./: README.md  pyproject.toml
concinnity/: concinnity.cfg  concinnity.py
src/concinnity/: concinnity.cfg  concinnity.data  concinnity.py
