[project]
name = "concinnity"
version = "0.1.2"
description = "clean and aesthetic CLI counter tool!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
license = "GPL-3.0-only"
license-files = ["LICENSE"]

[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"

[project.scripts]
concinnity = "concinnity.concinnity:main"
counter = "concinnity.concinnity:main"

[tool.setuptools.packages.find]
where = ["src"]
